Code refactoring and bugfixes (#13)
* Popover: fixed a bug that a node value was not being set
* PlatformUtils: fixed a bug that MacOS can be an OS with name darwin
* Optimized switch statements
* Code formatting and cleanup
* Removed unused imports
* Reformat markdown tables
* Use try-with-resources
* Improve Javadoc
* Enforce Git compliance
* Better NPE error messages
* Fixed spelling errors